# votala

./: INFOS.TXT  Makefile  README.md  pyproject.toml  votala.txt
docker_configuration/: development.env  votala.development.docker-compose.yaml  votala.docker-compose.yaml  votala.production.docker-compose.yaml
docker_configuration/backend/: Dockerfile
docker_configuration/email_handler/: Dockerfile
docker_configuration/email_server/: Dockerfile
docker_configuration/frontend/: Dockerfile  nginx.conf
src/backend/: main.py
src/backend/dependencies/: database.py  message_broker.py
src/backend/models/: models.py  orm_models.py  voting.py
src/backend/modules/authentication/: authentication.py
src/backend/modules/log/: logs.py
src/backend/routes/: authentication.py  register.py  voting.py
src/email_handler/: email_handler.py
src/email_handler/resources/: email-template.html
votala/backend/: main.py  serve.py
votala/backend/dependencies/: authentication.py  database.py  message_broker.py
votala/backend/models/: custom_responses.py  orm_models.py  schemas.py
votala/backend/modules/: authentication.py  config.py  datum.py  logs.py  polling.py  social.py
votala/backend/routes/: authentication.py  polling.py  social.py
votala/email_handler/: email_handler.py
votala/frontend/: group-creation.html  index.html  login.html  user-profile.html
votala/frontend/css/: style.css
votala/frontend/js/: group-creation.js  login.js  user-profile.js
