[tool.poetry]
name = "votala"
version = "0.1.0"
description = ""
authors = ["Lucas Sousa Silva <lucassousasilva@yahoo.com>"]
readme = "README.md"

[tool.pyright]
venvPath = "/home/lucas/.cache/pypoetry/virtualenvs/"
venv = "votala-IahsKVBf-py3.11"

[tool.isort]
profile = "black"
src_paths = "votala/backend"

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.2.7"
fastapi = "^0.89.1"
pydantic = "^1.10.4"
sqlalchemy = "^2.0.0"
msgpack = "^1.0.5"
aiormq = "^6.7.6"
rich = "^13.4.2"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
